Adding KiCAD files to the repository
I believe the circuit is correct. I will need to check the circuit thoroughly and then build the board.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
 
+*~
+notebooks/Manifest.toml
+kicad-circuit/anemometer/anemometer-backups
+
 # Temporary files
 *.000
 *.bak
